Migrate AbstractTransmitQueueTest to JUnit5
Migrate and modernize tests.

Change-Id: If2b2ae7d1138c79d0480b900875c659af5eee8ec
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>